bugfixes menu z-index

--- a/style-guide/source/css/components/_menu.scss
+++ b/style-guide/source/css/components/_menu.scss
@@ -36,5 +36,6 @@
     padding-top: $unit-8 * 2;
     text-align: center;
     font-size: $unit-4 + $unit;
+    z-index: 9;
   }
 }
